testdata/baselines/reference/submodule/conformance/conflictingCommonJSES2015Exports.errors.txt
bug24934.js(2,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
use.js(1,21): error TS2497: This module can only be referenced with ECMAScript imports/exports by turning on the 'esModuleInterop' flag and referencing its default export.


==== bug24934.js (1 errors) ====
    export function abc(a, b, c) { return 5; }
    module.exports = { abc };
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
==== use.js (1 errors) ====
    import { abc } from './bug24934';
                        ~~~~~~~~~~~~
!!! error TS2497: This module can only be referenced with ECMAScript imports/exports by turning on the 'esModuleInterop' flag and referencing its default export.
    abc(1, 2, 3);
    